<resources>
    <string name="app_name">Reminder</string>
    <string name="calendar">Calendar</string>
    <string name="night_mode">Theme Select</string>
    <string name="notification">Notification</string>
    <string name="add_event">Add Event</string>
    <string name="_12_00">12:00</string>
    <string name="line_1">Line 1</string>
    <string name="line_2">Line 2</string>
    <string name="background_for_times">background for times</string>
    <string name="more_menu">more menu</string>
    <string name="change_color">Change Color</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="time_button_default_text">00:00</string>
    <string name="finish_time">Finish Time: </string>
    <string name="start_time">Start Time: </string>
    <string name="class_name">Class Name</string>
    <string name="course_name">Course Name</string>
    <string name="enter_the_course_name">Enter the course name…</string>
    <string name="enter_the_name_of_the_class">Enter the name of the class…</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="choose_theme_text">Choose Theme</string>
    <string name="table">Table</string>
    <string name="action_today">Current week</string>
    <string name="action_day_view">Day view</string>
    <string name="action_three_day_view">3 day view</string>
    <string name="action_week_view">Week view</string>
    <string name="all_day">All day</string>
    <string name="untitled_event">Untitled event</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="systemDefault">System Default</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="thursday">Thursday</string>
    <string name="notificationTitle">Hurry!</string>
    <string name="notificationText">Course is about to start</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="are_you_sure">Are you sure want to delete?</string>
    <string name="warning">Warning!</string>
    <string name="must_be_filled">All areas must be filled!</string>
    <string name="ok">OK</string>
    <string name="about">About</string>
    <string name="animationRef" translatable="false"><a href="https://lottiefiles.com/781-no-notifications">Animation by Bryan Trang on LottieFiles</a></string>
    <string name="madeBy">Made by Hasan Deniz and Ali Türk</string>
    <string name="references">References:</string>
    <string name="contact">Contact Us: hasandeniz394@gmail.com </string>
    <string name="delete_button">Delete Button</string>
    <string name="showcase_add">This is add button\n\nYou can add your courses here! </string>
    <string name="showcase_theme">This is change theme button\n\nYou can change your theme here! </string>
    <string name="showcase_table">This is table view button\n\nYou can see your courses here! </string>
    <string name="showcase_page">This is main page\n\nYou can see your daily courses here! </string>
    <string name="got_it">GOT IT</string>

</resources>