<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AboutActivity">


    <TextView
        android:id="@+id/credits"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:text="@string/references"
        android:textColor="@color/customTimeTextColor"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/animationRef"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/credits"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/animationRef"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/contact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:autoLink="email"
        android:clickable="true"
        android:layout_alignBottom="@id/madeBy"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="30dp"
        android:text="@string/contact"
        android:textColor="@color/customTimeTextColor"
        android:focusable="true" />

    <TextView
        android:id="@+id/madeBy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="3dp"
        android:gravity="center"
        android:text="@string/madeBy"
        android:textColor="@color/customTimeTextColor" />


</RelativeLayout>


