<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp">

    <RelativeLayout
        android:id="@+id/relativeLayoutEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@id/linearLayout"
            android:orientation="vertical">


            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/line_1"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/cardview_default_elevation"

                android:layout_marginBottom="1dp"
                android:text="@string/line_2" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/imageTextUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/_12_00"
                android:textColor="@color/customIconColor"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/imageTextDown"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/_12_00"
                android:textColor="@color/customIconColor"
                android:textSize="18sp" />
        </LinearLayout>

        <ImageButton
            android:id="@+id/deleteItemButton"
            android:layout_width="48dp"
            android:layout_height="46dp"
            android:layout_alignParentEnd="true"
            android:background="@color/deleteButtonBackground"
            android:contentDescription="@string/more_menu"
            android:foregroundGravity="center_vertical"
            app:srcCompat="@drawable/ic_baseline_delete_24" />


    </RelativeLayout>
</androidx.cardview.widget.CardView>